--- a/20251229/3교시.md
+++ b/20251229/3교시.md
@@ -23,18 +23,17 @@ App.jsx 에 다음과 같이 코드를 적용하면 됨
 const Page1 = () => <h1>상단 화면</h1>
 const Page2 = () => <h1>하단 화면</h1>
 
-function Main () {
+const Main = () => {
   const arr = ["1번", "2번", "3번"]
+  const Page3 = (v,i) => <li key={i}>{v}</li>
   return ( 
     <ul>
-      {
-        arr.map((v,i) => <li key={i}>{v}</li>)
-      }
+      {arr?.map(Page3)}
     </ul>
   )
 }
 
-function App() {
+const App = () => {
   return (
     <> 
       <Page1 />
@@ -48,3 +47,55 @@ function App() {
 
 export default App
 ```
+- arrow function 사용하기
+- 그리고 Page3이 `const App` 밑에 있는 `<Main>`에 넣지 못한다는걸 주의
+  - 왜? `const Main` 밑에 변수로 넣어줬기 때문
+
+- `v`랑 `i`가 무슨 의미인지 잘 이해를 못할 수도 있으니 늘려줄 수도 있음
+  - `key={i}`의 의미: 인덱스가 고유값이라 v들을 구분해줄 수 있는 요소이기 때문
+  - 다른 말로는 React에게 “이 li가 누구인지” 알려주는 이름표
+  - 이건 React 전용 문법이 아니라 JavaScript map + JSX 조합
+    - map의 역할: 배열 하나를 받아서 같은 길이의 새 배열을 만든다
+
+- `page3`는 소문자로 써도 된다
+  - 왜? call back 함수의 위치에 있어서 JSX에서 하는게 아니라 여기서 호출하는거라서 소문자로 써도 됨
+
+
+
+1️⃣ 이 코드의 전체 구조 한눈에 보기
+
+👉 React 앱은 “컴포넌트 트리” 구조
+👉 App이 항상 최상위 루트 역할
+
+App (최상위 컴포넌트)
+ ├─ Page1 (상단 영역)
+ ├─ Main  (데이터 기반 렌더링)
+ └─ Page2 (하단 영역)
+
+2️⃣ Vite + React에서 가장 중요한 전제
+✅ Vite에서는
+- App.jsx 또는 App.js를 컴포넌트 단위로 관리
+- main.jsx에서 App을 불러와 렌더링
+- JSX를 쓰기 때문에 React import를 직접 안 써도 됨 (Vite + 최신 React 기본 설정)
+
+```
+export default App
+```
+➡️ 이 한 줄이 App을 앱의 시작점으로 만듦
+
+3️⃣ 함수형 컴포넌트의 핵심 규칙 (Vite에서도 동일)
+🔹 1. 컴포넌트는 함수다
+```
+function Main() { ... }
+const Page1 = () => { ... }
+```
+🔹 2. 이름은 반드시 대문자로 시작
+```
+<Page1 />   // 컴포넌트
+<page1 />   // ❌ HTML 태그로 인식
+```
+🔹 3. JSX를 return 해야 화면에 보인다
+```
+return <h1>상단 화면</h1>
+```
+
