--- a/20251226/6교시.md
+++ b/20251226/6교시.md
@@ -78,3 +78,19 @@ export default function Main(req, res) {
 }
 
 ```
+
+이채훈님 디스코드 공유 답
+```
+  const Html = () => 
+<> 
+  <li>1번</li>
+  <li>2번</li>
+  <li>3번</li>
+</>
+
+  return ( 
+    <ul>
+      <Html />
+    </ul>
+  )
+```
