--- a/20251229/2교시.md
+++ b/20251229/2교시.md
@@ -42,7 +42,7 @@ export default App;
 - JSX 영역의 리액트는 함수 형식에서 호출을 대문자로 한다 
   - html은 그려내는거고 리액트는 함수를 불러오는거라는 개념
   - 대문자와 소문자 이용의 차이
-<h3> 핵심: JSX 영역에서 대문자로 시작하는 태그는 'React 컴포넌트(=함수 호출)'로 취급)로h3h
+<h3> 핵심: JSX 영역에서 대문자로 시작하는 태그는 'React 컴포넌트(=함수 호출)'로 취급)로 </h3>
 
 <img width="821" height="452" alt="image" src="https://github.com/user-attachments/assets/bf136be4-2906-4f37-ac45-d048bad41c2f" />
 - 조건문 & 반복문 말고 밖에 있는게 고정된거고 아래에 있는건 변경되는 내용들
