--- a/20251229/6교시(파일관리).md
+++ b/20251229/6교시(파일관리).md
@@ -57,3 +57,70 @@ const Main = () => {
 
 export default Main
 ```
+
+파일 정리가 중요하기 때문에 (url: https://github.com/ESG-EDU/Docs/tree/main/react)
+```
+import { defineConfig } from 'vite';
+import react from '@vitejs/plugin-react';
+import { fileURLToPath, URL } from 'url'; // 추가
+
+// https://vite.dev/config/
+export default defineConfig({
+  plugins: [react()],
+  resolve: {
+    alias: {
+        '@': fileURLToPath(new URL('./src', import.meta.url)), // 추가
+    },
+},
+});
+```
+위 정보를 이용해서
+
+vite.config.js
+```
+import { defineConfig } from 'vite'
+import react from '@vitejs/plugin-react'
+import { fileURLToPath, URL } from 'url'
+
+// https://vite.dev/config/
+export default defineConfig({
+  plugins: [react()],
+  server: {
+    host: true,
+  },
+  resolve: {
+    alias: {
+        '@': fileURLToPath(new URL('./src', import.meta.url)),
+        '@page' : fileURLToPath(new URL('./scr/page1', import.meta.url))
+    }
+  }
+})
+
+```
+
+App.js
+```
+import Main, { Page1, Page2 } from '@/page/Common.jsx'
+// import Main from './page/Main.jsx'
+
+const App = () => {
+  return (
+    <> 
+      <Page1 />
+      <Main />
+      <Page2 />
+    </>
+  )
+}
+
+export default App
+```
+
+중요한 점
+```
+  server: {
+    host: true,
+```
+- 이걸 넣어야만 남들이 접근할 수 있음
+  - IP만 알면 됨
+    - 터미널 > npm run dev > IP 주소 중 192로 시작하는것: 내 개인 IP
