--- a/20251229/7교시.md
+++ b/20251229/7교시.md
@@ -1,3 +1,16 @@
 React Bootstrap: https://react-bootstrap.netlify.app/docs/forms/checks-radios
 - 시간 없을 때 UI 이쁘게 사용하기 좋음
 
+Github push & pull
+
+
+폴더 만듦
+확장자 파일 '.md'
+터미널 오픈
+git clone (우리 주소 복사)
+
+git add .
+git commit -m "연습"
+git push
+
+git pull
