--- a/260102/1교시.md
+++ b/260102/1교시.md
@@ -22,3 +22,15 @@ git branch
 ```
 npm i react-router
 ```
+
+내가 pull하려면
+```
+git pull
+```
+
+내가 가져오려면 (push하려면)
+```
+git add .
+git commit -m "내용"
+git push
+```
