--- a/260102/5교시.md
+++ b/260102/5교시.md
@@ -1,3 +1,23 @@
 암기하삼
 
 <img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/8426c7cf-ce0c-4fac-a4c5-92e51eb13bd5" />
+
+`useState("")` 쓰면 **배열**이 전달된다
+
+```
+  var [] = useState("")
+  let [] = useState("")
+  const [] = useState("")
+```
+
+  각각으로 받았을 때 어떻게 나오는지 
+
+  <img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/63f5d52c-a522-4474-aaaf-c13c415e9268" />
+
+- 콘솔에서 봤을 때 var, let은 에러가 안 뜨는데 const 쓴 c는 에러가 뜸
+- 이는 곧 const를 써야만이 제약을 제대로 걸 수 있다. (useState을 써야해서 이런거임)
+
+<img width="1002" height="591" alt="image" src="https://github.com/user-attachments/assets/47f8fb16-2d49-41fa-8b2f-b1ccda5f6be8" />
+
+콘솔로그가 다 찍힌 뒤 호출이 된다
+`const [c, setC] = useState("C")` 얘는 다른 애들이 다 실행된 후에 늦게 실행된다
