--- a/260102/5교시.md
+++ b/260102/5교시.md
@@ -21,3 +21,29 @@
 
 콘솔로그가 다 찍힌 뒤 호출이 된다
 `const [c, setC] = useState("C")` 얘는 다른 애들이 다 실행된 후에 늦게 실행된다
+
+```
+import { useState } from "react"
+
+const App = () =>  { //결국 출력이 되지 않는 것이다
+  var [a, setA] = useState("A") //하지만 값이 같기 때문에
+  let [b, setB] = useState("B")
+  const [c, setC] = useState("C")
+  console.log("App 호출 됨")
+  const event = () => {
+      console.log(1, a)
+      setA("A") //이 코드는 실행이 된다
+      console.log(2, a)
+  }
+  return (
+    <>
+      <button type="button" onClick={event}>호출</button>
+      <p>{a}</p>
+      <p>{b}</p>
+      <p>{c}</p>
+    </>
+  )
+}
+
+export default App
+```
