--- a/260102/5교시.md
+++ b/260102/5교시.md
@@ -47,3 +47,8 @@ const App = () =>  { //결국 출력이 되지 않는 것이다
 
 export default App
 ```
+
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/c616fefb-6016-4841-8367-47b2b72e0f99" />
+
+- `setA("AA)`랑 `if ( a === "AA")`랑 같이 쓸 수 없음
+  - 왜? 실행 될 수 없으니까
