--- a/260102/5교시.md
+++ b/260102/5교시.md
@@ -50,5 +50,5 @@ export default App
 
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/c616fefb-6016-4841-8367-47b2b72e0f99" />
 
-- `setA("AA)`랑 `if ( a === "AA")`랑 같이 쓸 수 없음
-  - 왜? 실행 될 수 없으니까
+- useState상태에서는 `setA("AA)`랑 `if ( a === "AA")`랑 같이 쓸 수 없음
+  - 왜? 두 번 클릭해야 실행 되는데 그건 비정상 상태니까. 
