--- a/260102/5교시.md
+++ b/260102/5교시.md
@@ -52,3 +52,14 @@ export default App
 
 - useState상태에서는 `setA("AA)`랑 `if ( a === "AA")`랑 같이 쓸 수 없음
   - 왜? 두 번 클릭해야 실행 되는데 그건 비정상 상태니까. 
+
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/c4650095-6f0f-4f0f-b8b7-822a059b9d7f" />
+
+- 위에꺼가 어려우니까 밑에처럼 써라
+
+<img width="1273" height="1040" alt="image" src="https://github.com/user-attachments/assets/72cbc482-4aa8-4bf0-8b1d-c828760e9c77" />
+
+- 더 간추리면 아래와 같다
+
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/a4793bc2-2ccd-4bee-803e-29f25d6a8725" />
+
