--- a/260105/2교시.md
+++ b/260105/2교시.md
@@ -32,7 +32,10 @@ fn1
 fn2
 3
 ```
-로 출력이 되고 (if는 무시되니까)
+로 출력이 됨
+- 왜? setA("A")는 맨 마지막에 실행이 되고 if절이 먼저 수행이 됨
+- 근데 if절은 무시됨
+  - 왜? a === "AA"가 아니라 아직 a === "A" 니까
 
 두 번째 event를 실행시키면 
 ```
