--- a/260106/정답코드.md
+++ b/260106/정답코드.md
@@ -121,3 +121,84 @@ const Detail = () => {
 export default Detail
 ```
 
+Create.html
+```
+import { useState } from 'react'
+import { useNavigate } from 'react-router'
+
+const Create = () => {
+    const navigate = useNavigate()
+    //값을 초기화 시킨다 - 그래서 밑에 ""라고 초기값을 넣어준 것
+    //변수에 초기함수 담기
+    const [name, setName] = useState("")
+    const [email, setEmail] = useState("")
+    const [pwd, setPwd] = useState("")
+    const [gender, setGender] = useState(true)
+    const onclick = () => navigate("/")
+    const onSubmit = e => {
+        //  폼(form) 제출이라는 이벤트를 처리하기 위해 정의하는 화살표 함수
+        e.preventDefault()
+        //form이 기본적으로 주소를 이동하려 하는데 그걸 막아주는 필수 함수
+        //새로고침 없이 React에서만 처리하기 위함
+
+        // '기본 동작을 방지한다'
+        // 페이지 새로고침을 막는 것 (깜빡거림 방지)
+        // 폼의 특성이 어디로 가려고 하는 것이라서 이런 현상이 발생하는 것
+        const data = {name, email, pwd, gender}
+        // 폼에 적힌 값들을 하나의 객체로 묶어준 것
+        //데이터에 객체 지정
+        console.log(data)
+    }
+
+    // e.target.value 뜻: 이벤트가 발생한 요소(e.target-어떤 HTML 요소에서 발생했는지)에 입력된(value-실제값) 값을 꺼내기 위해 사용
+    // ㄴ입력값이 바뀔 때 마다 name 상태 업데이트
+    // onChange={e=>setGender(true)} 뜻: React에서 <input> 요소의 값이 변경될 때(사용자가 입력할 때)마다 setGender 상태를 true로 설정하라는 의미
+    // onChange 될 때 마다 생태값이 업데이트 됨 (한 글자 한 글자 업데이트 되는 거)
+    // e.target: 이벤트가 발생한 대상 => <input />
+    // 
+    return (
+        <div className="container mt-3">
+          <h1 className="text-center">생성 화면</h1>
+            <form onSubmit={onSubmit}>
+                { /* submit 버튼 클릭 또는 Enter 입력 시 onSubmit 실행하는건 form의 특징 */}
+                <div className="mb-3 mt-3">
+                    <label htmlFor="name" className="'form-label">이름:</label>
+                    <input type="text" className="form-control" id="name" placeholder="이름을 입력하세요." name="name" value={name} onChange={e=>setName(e.target.value)} /> 
+                </div>
+                <div className="mb-3 mt-3">
+                    <label htmlFor="email" className="'form-label">이메일:</label>
+                    <input type="email" className="form-control" id="email" placeholder="이메일을 입력하세요." name="email" value={email} onChange={e=>setEmail(e.target.value)} />
+                </div>
+                <div className="mb-3 mt-3">
+                    <label htmlFor="pwd" className="'form-label">비밀번호:</label>
+                    <input type="password" className="form-control" id="pwd" placeholder="비밀번호를 입력하세요." name="pwd" value={pwd} onChange={e=>setPwd(e.target.value)} />
+                </div>
+                <div className="d-flex">
+                    <div className="p-2 flex-fill">
+                        <div className="form-check">
+                            <input type="radio" className="form-check-input" id="radio1" name="gender" value="1" checked={gender === true} onChange={e=>setGender(true)}/>남성
+                            <label className="form-check-label" id="radio1"></label>
+                        </div>
+                    </div>
+                    <div className="p-2 flex-fill">
+                        <div className="form-check">
+                            <input type="radio" className="form-check-input" id="radio2" name="gender" value="2" checked={gender === false} onChange={e=>setGender(false)}/>여성
+                            <label className="form-check-label" id="radio2"></label>
+                        </div>
+                    </div>               
+                </div>
+                <div className="d-flex">
+                    <div className="p-2 flex-fill d-grid">
+                        <button type='submit' className="btn btn-primary">생성</button>
+                    </div>
+                    <div className="p-2 flex-fill d-grid">
+                        <button type='submit' className="btn btn-primary" onClick={onclick}>취소</button>
+                    </div>                    
+                </div>                                
+            </form>
+        </div>
+    )
+}
+
+export default Create
+```
