--- a/260106/정답코드.md
+++ b/260106/정답코드.md
@@ -135,7 +135,7 @@ const Create = () => {
     const [pwd, setPwd] = useState("")
     const [gender, setGender] = useState(true)
     const onclick = () => navigate("/")
-    const onSubmit = e => {
+    const onsubmit = e => {
         //  폼(form) 제출이라는 이벤트를 처리하기 위해 정의하는 화살표 함수
         e.preventDefault()
         //form이 기본적으로 주소를 이동하려 하는데 그걸 막아주는 필수 함수
