--- a/260107/주석과정답.md
+++ b/260107/주석과정답.md
@@ -65,15 +65,16 @@ const Detail = () => {
   // List.js에서 navigate(`/detail/${i}`)
   // Detail.js에서 params.id === i
   // 이 두개가 합쳐져서 밑에 useEffect에 있는 const data = list[params.id] 가 가능해지는 것
+  // 정리: params로 URL 파라미터 값을 받는
   const navigate = useNavigate()
   // 초기값으로 설정해둔 뒤, 하기 사항들을 설정함
   // 밑에처럼 나눠둔 이유: 입력창을 제어 컴포넌트로 만들기 위해
   const [title, setTitle] = useState("")
   const [content, setContent] = useState("")
   const [accept, setAccept] = useState(0)
-  // accept의 경우 ""가 아닌 0으로 하는 이유는? 1-승인, 0-미승인
+  // accept의 경우 ""가 아닌 0으로 하는 이유는? 1-승인, 2-미승인, 0-전체
   const [isEdit, setIsEdit] = useState(true)
-  // boolean 형식이기 때문에 true/false로 정해뒀고 isEdit은 수정유무를 뜻하는 것인가?
+  // 수정/저장 버튼 제어용
 
   const close = () => navigate("/")
   // close를 누르면 첫번째 화면으로 이동 (잘못된 id 접근 시 강제 이동)
@@ -81,12 +82,15 @@ const Detail = () => {
   // onSubmit을 누르면 event가 발생함
     e.preventDefault()
   // default 상태로 돌아가려는 것을 일단 막아줌 (form 제출 시 새로고침 막음)
-    if(!isEdit) return
-  // !isEdit일 경우 “아무것도 안 하고 끝” (함수 실행 자체를 중단)
+    if(!isEdit) {
+      return
+    // 수정 버튼이 아닐 때 내용을 수정할 수 없게끔 막아주는 역할
+    } else {
     const data = {title, content, accept}
   // 저장 버튼을 눌렀을 때 만들어지는 데이터
     console.log(data)
   // 지금은 서버도 DB도 없어서 콘솔에만 출력하는 것
+    }
   }
   useEffect(()=>{
     const data = list[params.id]
@@ -95,6 +99,8 @@ const Detail = () => {
       setTitle(data?.title)
       setContent(data?.content)
       setAccept(data?.accept)
+      //data가 존재할 때만 title을 꺼내고, data가 없으면 에러 없이 undefined를 반환하기 위한 안전장치야.
+      // ?: 삼항연산자
     }, [])
     // []: 처음 렌더링 시 딱 한 번만 실행
   return (
@@ -111,10 +117,11 @@ const Detail = () => {
         </div>
         <div className="d-grid gap-2 d-md-flex justify-content-md-end">
             <button className="btn btn-primary me-md-2" type="submit" onClick={()=>setIsEdit(!isEdit)}>{isEdit ? "수정" : "저장"}</button>
-            {/* 이 버튼의 실제 역할- 첫클릭: 수정 모드 전환, 두 번째 클릭: 저장 */}
+            {/* 조건문 ? "":"" -> 조건문이 맞으면 첫번째""를 적용하고, 틀리면 두번째""를 적용해라
+            이 버튼의 실제 역할- 첫클릭: 수정 모드 전환, 두 번째 클릭: 저장 */}
             {
               (accept === 1) ? 
-              <button className="btn btn-warning" type="button" onClick={()=>setAccept(0)}>미승인</button> :
+              <button className="btn btn-warning" type="button" onClick={()=>setAccept(2)}>미승인</button> :
               <button className="btn btn-success" type="button" onClick={()=>setAccept(1)}>승인</button>
             }
             <button className="btn btn-secondary" type="button" onClick={close}>취소</button>
