--- a/260107/주석과정답.md
+++ b/260107/주석과정답.md
@@ -161,8 +161,11 @@ const List = () => {
     if(state === 1 || state === 2) {
   // 승인과 미승인 둘 중 하나일 경우 (or)로 if절을 만듦
       setArrs(list.filter(row => row.accept === state))
-  // filter라는게 승인을 눌렀을 때 아이템1만 나오고 미승인을 눌렀을 때 아이템2만 나오는 설정값
-  // 맞긴한데 list 전체를 돌면서 조건에 맞는 것만 새 배열로 반환 (state === 1 -> → accept === 1 인 것만 남김)
+  // filter: 승인을 눌렀을 때 아이템1만 나오고 미승인을 눌렀을 때 아이템2만 나오는 설정값
+  // filter: 배열을 처음부터 끝까지 한 번씩 돌면서 매번 요소 하나를 함수에 넘겨줌. 그 “요소 하나”를 받는 변수 이름이 바로 row
+  // row: 매개변수(parameter). list 배열을 돌면서 한 칸씩 꺼내온 “각 요소(객체)”를 임시로 부르는 이름. 다른 단어 써도 무관한데 "한 줄(row) = 한 데이터"라는 DB/테이블 관점에서 관용적으로 쓰임
+  // row: filter가 자동으로 넣어주는 값
+  // 정리: list 전체를 돌면서 조건에 맞는 것(filter)만 새 배열(arrs)로 반환 (state === 1 → accept === 1 인 것만 남김)
     } else {
       setArrs([...list])
   // list로 돌아가는건 알겠는데 list를 깊이 복사 한다는게 뭔 소린지 모르겠음
