--- a/Python/260112(Python).md
+++ b/Python/260112(Python).md
@@ -51,3 +51,27 @@ https://github.com/ESG-EDU/WEB_STUDY/tree/main/backend/python/src/study02
 
 `jupyter notebook &`
 ㄴ입력하면 웹서비스 켜짐
+
+New 누르면 코드 입력 가능
+
+주피터의 좋은 점은 
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/e8540a9e-7f25-4148-add0-cd763b9ac858" />
+
+그리고 google에 colab이라는게 있음
+
+new notebook 만들기 하면 하기와 같은 화면이 뜸
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/e340bec3-dbee-4c9d-8c84-aa873b6d918d" />
+
+하기와 같이 text와 코드 모두 사용 가능
+구글 드라이브에 자동 저장 됨
+공유하기 정말 좋음
+그리고 내 pc 사양이 안 좋은데 여기서 runtime 유형 변경해서 그래픽카드 설정 가능 
+<img width="854" height="1040" alt="image" src="https://github.com/user-attachments/assets/c832b0c4-0bcb-4553-9b51-004ce910db02" />
+
+진짜 존나 개신기한건 jscode에 자동 저장 된다는 사실임;;
+
+터미널에 ctrl+c하면 꺼짐
+웹서비스도 꺼짐
+
+여기에 study 01, 02, 03 보면서 연습하기
+https://github.com/ESG-EDU/WEB_STUDY/tree/main/backend/python/src
