--- a/Python/260112(Python).md
+++ b/Python/260112(Python).md
@@ -75,3 +75,49 @@ new notebook 만들기 하면 하기와 같은 화면이 뜸
 
 여기에 study 01, 02, 03 보면서 연습하기
 https://github.com/ESG-EDU/WEB_STUDY/tree/main/backend/python/src
+
+===================================================
+```
+print ( "문자" * 10 )
+```
+- `문자문자문자문자문자문자문자문자문자문자`
+- 반복문이 됨
+
+```
+print (type( True ))
+```
+- 파이썬은 `True`를 대문자로 함
+- 파이썬은 typeof가 아니라 type만 씀
+
+```
+print ( True + 10 )
+```
+- 답: 11
+- 왜? True=1, False=0 이니까
+
+```
+a = 1
+a
+```
+- 출력: 1
+- `print(a)`에서 프린트를 생략해도 출력 됨
+
+```
+b = 1.0
+type(b)
+```
+- 출력: float
+
+```
+type(a) == type(b)
+```
+- 출력: False
+
+```
+a == b
+```
+- 출력: True
+
+<img width="256" height="336" alt="image" src="https://github.com/user-attachments/assets/c113a297-9ff8-48e8-b9ab-0e7f5c1c10ef" />
+''' 세개는 엔터(줄바꿈)
+
