--- a/Python/260113진도.md
+++ b/Python/260113진도.md
@@ -1,26 +1,28 @@
-Python 기본 자료형 정리 이미지입니다.
+아래는 Python 기본 자료형 정리 이미지입니다. 기본이라 머릿속에 넣어놔야 된다고 합니다.
 https://cdn.discordapp.com/attachments/1460454191880470764/1460454192362557482/python.png?ex=6966f975&is=6965a7f5&hm=9548edcb5009fa757af089d6d4b4f8e5d4c49f85b15c314034c1922763dff012&
 
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/661f20a6-7db0-4411-bc32-d6a2dbdcf997" />
 
-1,2는 유료라서 우리는 13위인 MariaDB 쓴다고 합니다.
-Database Model은 Relational(관계형)과 Multi-model이 있는데
-MongoDB의 경우 Multi-model만 있기 때문에 "NoSQL"이라고 불립니다.
+1,2는 유료라서 우리는 13위인 MariaDB 쓴다고 합니다.<br />
+Database Model은 Relational(관계형)과 Multi-model이 있는데<br />
+MongoDB의 경우 Multi-model만 있기 때문에 "NoSQL"이라고 불립니다.<br />
 
-16위 Apache Hive의 경우는 빅데이터(성질 3개: 다양한, 많은, 빠른 데이터)입니다.
-우리는 빅데이터를 안배우고 AI데이터를 배웁니다.
+16위 Apache Hive의 경우는 빅데이터(성질 3개: 다양한, 많은, 빠른 데이터)입니다.<br />
+우리는 빅데이터를 안배우고 AI데이터를 배웁니다.<br />
 
-이상 데이터베이스에 관한 이야기였습니다.
+이상 데이터베이스에 관한 이야기였습니다.<br />
 
 =====================================
 <img width="1035" height="752" alt="image" src="https://github.com/user-attachments/assets/09b4931a-f1fa-46c9-950a-d10e543be060" />
 
-우리는 Python과 SQL에 대해 배울 것이고 이들은 관계형 데이터입니다.
+우리는 Python과 SQL에 대해 배울 것이고 이들은 관계형 데이터입니다.<br />
+SQL의 경우 W3에서 참고할 수 있다고 합니다.<br />
+https://www.w3schools.com/sql/default.asp
 
-저희 이번 프로젝트에서는 SQL, Python, CSS, Javascript, HTML 다룰 예정입니다.
+저희 이번 프로젝트에서는 SQL, Python, CSS, Javascript, HTML 다룰 예정입니다.<br />
 
-Apache Spark와 Kafka는 파이널 프로젝트에서 활용될 예정입니다.
-이번달에 배우지 않고 최종 직전에 배울 수도 있습니다.
-저희 학습능력에 따라 진도가 달라진다고 합니다.
+Apache Spark와 Kafka는 파이널 프로젝트에서 활용될 예정입니다.<br />
+이번달에 배우지 않고 최종 직전에 배울 수도 있습니다.<br />
+저희 학습능력에 따라 진도가 달라진다고 합니다.<br />
 
 =====================================
