--- a/Python/260113진도.md
+++ b/Python/260113진도.md
@@ -1,3 +1,12 @@
+나라님 13일(화) 진도 내용 정리한거 전달 드립니다.
+어떤걸 했는지, 왜 하는지 상세하게 기록해뒀습니다.
+
+요약하자면
+- mariadb 12.1.2 설치
+- 
+
+=====================================
+
 아래는 Python 기본 자료형 정리 이미지입니다. 기본이라 머릿속에 넣어놔야 된다고 합니다.
 https://cdn.discordapp.com/attachments/1460454191880470764/1460454192362557482/python.png?ex=6966f975&is=6965a7f5&hm=9548edcb5009fa757af089d6d4b4f8e5d4c49f85b15c314034c1922763dff012&
 
@@ -13,6 +22,7 @@ MongoDB의 경우 Multi-model만 있기 때문에 "NoSQL"이라고 불립니다.
 이상 데이터베이스에 관한 이야기였습니다.<br />
 
 =====================================
+
 <img width="1035" height="752" alt="image" src="https://github.com/user-attachments/assets/09b4931a-f1fa-46c9-950a-d10e543be060" />
 
 우리는 Python과 SQL에 대해 배울 것이고 이들은 관계형 데이터입니다.<br />
@@ -26,3 +36,45 @@ Apache Spark와 Kafka는 파이널 프로젝트에서 활용될 예정입니다.
 저희 학습능력에 따라 진도가 달라진다고 합니다.<br />
 
 =====================================
+
+우리 팀원 4명이 같은 DB 하나를 써야돼서 docker.desktop을 사용합니다.<br />
+(개인 피씨에 DB 깔면 5개를 관리해야해서 이렇게 한다고 합니다.)<br />
+
+npm이 node의 모듈이었다면 Docker Hub는 DB의 모듈이라고 생각하면 됩니다.<br />
+검색창에 mariadb 검색하고 tag에 들어가서 12.1.2를 copy해서 터미널(cmd창)에 복붙합니다.<br />
+(여러 버전이 있는데 어떤걸 다운받는지 정하는거는 하기 링크에서 MariaDB Server Version을 확인합니다.<br />
+https://mariadb.org/download/?t=mariadb&p=mariadb&r=12.1.2&os=windows&cpu=x86_64&pkg=msi&mirror=blendbyte
+
+제어창(?)에서 명령 프롬프트 열고 `docker pull mariadb:12.1.2` 를 설치합니다.<br />
+<img width="1037" height="756" alt="image" src="https://github.com/user-attachments/assets/49bc881c-f361-472b-95e2-c8bc973d4ee4" />
+
+이후에 데이터베이스 실행 명령어인 `docker run -d -p 3306:3306 --env MARIADB_ROOT_PASSWORD=1234 --name mariadb  mariadb:12.1.2`를 이어서 설치합니다.<br />
+<img width="1041" height="620" alt="image" src="https://github.com/user-attachments/assets/103687ae-9206-4d9f-8ad4-07219c192e12" />
+
+바탕화면에 `HeidSQL`을 킵니다. (건너뛰기 클릭)<br />
+신규 클릭<br />
+세션이름 `도커`<br />
+암호 `1234` (위 db실행명령어에 password=1234로 되어 있기 때문)<br />
+데이터베이스: 세미콜론으로 구분 -> 여기서 4가지가 뜨면 성공!<br />
+열기 클릭<br />
+<img width="686" height="483" alt="image" src="https://github.com/user-attachments/assets/a36a1d67-2f01-470f-9611-5b8bfa4d7bd7" />
+
+노란색 하이라이트1: 접속<br />
+노란색 하이라이트2: 접속해제 (눌러보세용 -> 비번 입력하고 -> 열기 눌러보세용)<br />
+<img width="936" height="593" alt="image" src="https://github.com/user-attachments/assets/252e7237-d0ff-4ae0-87d2-c2b7168d0856" />
+
+여기서는 `mysql`말고는 다 건드리면 안된다고 합니다.<br />
+`user` 폴더를 찾고 `데이터`를 눌러서 아래 화면 확인합니다.<br />
+<img width="936" height="593" alt="image" src="https://github.com/user-attachments/assets/5af72376-8867-4312-b74f-64c966067162" />
+
+이 건물이 아닌 집에서 프로젝트를 진행할 경우 DB에 접속하고 싶을 때 하기 정보를 이용합니다. 
+
+host: aiedu.tplinkdns.com
+사용자: root
+암호: 1234
+포트: 4400
+
+=====================================
+
+여기까지 정리했는데 강사님이 정리본 있다고 하시네요 ㅋㅋ 아놔~
+https://github.com/ESG-EDU/Docs/tree/main/database
