--- a/Python/260113진도.md
+++ b/Python/260113진도.md
@@ -3,7 +3,6 @@
 
 요약하자면
 - mariadb 12.1.2 설치
-- 
 
 =====================================
 
@@ -78,3 +77,8 @@ host: aiedu.tplinkdns.com
 
 여기까지 정리했는데 강사님이 정리본 있다고 하시네요 ㅋㅋ 아놔~
 https://github.com/ESG-EDU/Docs/tree/main/database
+
+=====================================
+
+https://github.com/ESG-EDU/Docs/blob/main/database/mariadb/study01.sql
+<img width="1085" height="637" alt="image" src="https://github.com/user-attachments/assets/1bfccc25-2927-4fb9-b3fe-3154ff6c711b" />
