--- a/Python/260112(Python).md
+++ b/Python/260112(Python).md
@@ -121,3 +121,15 @@ a == b
 <img width="256" height="336" alt="image" src="https://github.com/user-attachments/assets/c113a297-9ff8-48e8-b9ab-0e7f5c1c10ef" />
 ''' 세개는 엔터(줄바꿈)
 
+===================================================
+
+javascript와 python 구분
+<img width="960" height="640" alt="image" src="https://github.com/user-attachments/assets/5b8cfcaf-21d4-4e26-97a7-dbeaa888cfed" />
+
+<img width="1114" height="687" alt="image" src="https://github.com/user-attachments/assets/1dd2ee73-cd1e-4250-a364-2d81fee318da" />
+- class: tool들을 묶어준다 (함수로만 나열하고 풀어놓으면 찾기 힘드니까 사용함-비유:공구들 다 넣는 공구함)
+
+<img width="1111" height="640" alt="image" src="https://github.com/user-attachments/assets/2afbe508-84d9-4a88-82ce-3dc95ca5683e" />
+
+중첩 for문
+<img width="1095" height="640" alt="image" src="https://github.com/user-attachments/assets/c33d5f88-c24b-444c-af77-90e54c04be8a" />
