--- a/Python/260115진도.md
+++ b/Python/260115진도.md
@@ -1,4 +1,4 @@
-*스터디12 폴더 참고*
+***스터디12 폴더 참고***
 
 [신규 프로젝트 만들기]
 
@@ -10,6 +10,14 @@
 <br />
 폴더<br />
 ㄴcli_node<br />
+package.json 수정할 부분 세 군데
+- "main": "index.js",
+- "start":"node src/index.js",
+- "type": "module"
+수정 후,
+터미널: `npm run start`
+출력: 자바스크립트
+
   ㄴdata<br />
     ㄴmemo.json<br />
     ```
@@ -34,3 +42,5 @@
     print("파이썬")
     ```
     <br />
+터미널: `uv run src/index.py`
+출력: 파이썬
