--- a/Python/260115진도.md
+++ b/Python/260115진도.md
@@ -10,13 +10,13 @@
 <br />
 폴더<br />
 ㄴcli_node<br />
-package.json 수정할 부분 세 군데
-- "main": "index.js",
-- "start":"node src/index.js",
-- "type": "module"
-수정 후,
-터미널: `npm run start`
-출력: 자바스크립트
+package.json 수정할 부분 세 군데<br />
+- "main": "index.js",<br />
+- "start":"node src/index.js",<br />
+- "type": "module"<br />
+수정 후,<br />
+터미널: `npm run start`<br />
+출력: 자바스크립트<br />
 
   ㄴdata<br />
     ㄴmemo.json<br />
@@ -42,5 +42,5 @@ package.json 수정할 부분 세 군데
     print("파이썬")
     ```
     <br />
-터미널: `uv run src/index.py`
-출력: 파이썬
+터미널: `uv run src/index.py`<br />
+출력: 파이썬<br />
