--- a/Python/260115진도.md
+++ b/Python/260115진도.md
@@ -44,3 +44,36 @@ package.json 수정할 부분 세 군데<br />
     <br />
 터미널: `uv run src/index.py`<br />
 출력: 파이썬<br />
+
+***이렇게하면 study12랑 같음***
+
+==============================
+
+npm 들어가서 commander 검색하고 왼쪽에 뜨는 install 코드 복붙해서 node 터미널에서 실행하면 됨<br />
+`npm i commander`
+링크: https://www.npmjs.com/package/commander
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/8a93eb9a-da6d-4951-b1f9-69f88f200f45" />
+
+cli_node 안에 있는 index.js에 다음과 같이 코드 적음
+```
+console.log("자바스크립트")
+
+import { Command } from 'commander';
+
+const program = new Command();
+
+program
+    .command('add <content>')
+    .description('메모 추가')
+    .action((content)=>{
+        console.log(content);
+        console.log("add() 실행")
+    });
+
+program.parse(process.argv);
+```
+터미널: npm run start add 안녕
+출력:
+자바스크립트
+안녕
+add() 실행
