--- a/Python/260115진도.md
+++ b/Python/260115진도.md
@@ -72,8 +72,34 @@ program
 
 program.parse(process.argv);
 ```
-터미널: npm run start add 안녕
-출력:
-자바스크립트
-안녕
-add() 실행
+
+터미널: npm run start add 안녕<br />
+출력:<br />
+자바스크립트<br />
+안녕<br />
+add() 실행<br />
+<br />
+<br />
+cli_python 안에 있는 index.py에 다음과 같이 코드 적음<br />
+
+```
+print("파이썬")
+
+import argparse
+
+parser = argparse.ArgumentParser(description="CLI 프로그램")
+subparsers = parser.add_subparsers(dest="command")
+
+add_parser = subparsers.add_parser("add", help="메모 추가")
+add_parser.add_argument("content", help="메모 내용")
+
+args = parser.parse_args()
+
+if args.command == "add":
+    print(args.content)
+```
+<br />
+터미널: uv run src/index.py add 테스트<br />
+출력:<br />
+파이썬<br />
+테스트<br />
