--- a/DB/260119.md
+++ b/DB/260119.md
@@ -169,3 +169,18 @@ COMMIT;
 | 격리 개념             | 방향은 맞음    |
 
 ---
+
+https://www.erdcloud.com/d/jYkyt5i5DyfHRaDBD
+
+SQL에서 쿼리 만든거 복붙해오면 
+
+**물리** ERD
+
+<img width="980" height="1040" alt="image" src="https://github.com/user-attachments/assets/4276424f-d3c4-4990-bea4-eef27e393ed8" />
+
+옷: 얘처럼 생긴게 多 (자식)
++: 얘처럼 생긴게 1 (부모)
+데이터가 1:多 라는 것
+
+<img width="632" height="256" alt="image" src="https://github.com/user-attachments/assets/31f2d449-753e-4be4-8f57-412d2a89d37d" />
+
