--- a/DB/260119.md
+++ b/DB/260119.md
@@ -184,3 +184,35 @@ SQL에서 쿼리 만든거 복붙해오면
 
 <img width="632" height="256" alt="image" src="https://github.com/user-attachments/assets/31f2d449-753e-4be4-8f57-412d2a89d37d" />
 
+<img width="429" height="370" alt="image" src="https://github.com/user-attachments/assets/ee637754-584c-45c2-af0e-e5c0f6486e6c" />
+
+[inner join] 사용<br />
+가능한:<br />
+<img width="480" height="392" alt="image" src="https://github.com/user-attachments/assets/d39038b2-c163-4aa8-aebe-5a956deb64c0" />
+
+정석:<br />
+<img width="474" height="396" alt="image" src="https://github.com/user-attachments/assets/09696386-3ba1-4c97-8b8f-85d5692ee5ed" />
+
+`AS e`를 사용해서 줄일 수 있음<br />
+<img width="440" height="389" alt="image" src="https://github.com/user-attachments/assets/0845bcd2-3417-4aa1-a732-ad9896382521" />
+
+`<>`: 부정<br />
+<img width="381" height="316" alt="image" src="https://github.com/user-attachments/assets/562dc4ca-6c67-487e-a3f3-d3c44a1eb704" />
+
+```
+SELECT e.emp_no,
+		 e.first_name,
+		 e.last_name,
+		 e.gender,
+		 s.salary
+	FROM edu.employees AS e
+  INNER JOIN edu.salaries AS s
+  	ON (e.emp_no = s.emp_no)
+  WHERE e.gender = 'F'
+	AND s.salary >= 70000
+	AND s.to_date = '9999-01-01'
+	;
+```
+이렇게 되면 중복(연봉 매년 상향)된 사람 없애줌
+
+이 때 요구되는 부분: 데이터를 보는 눈 & SQL 작성 능력 
