--- a/DB/260119.md
+++ b/DB/260119.md
@@ -216,3 +216,8 @@ SELECT e.emp_no,
 이렇게 되면 중복(연봉 매년 상향)된 사람 없애줌
 
 이 때 요구되는 부분: 데이터를 보는 눈 & SQL 작성 능력 
+
+<img width="420" height="343" alt="image" src="https://github.com/user-attachments/assets/00b04582-7f8a-4772-83f4-05ebaf7655ce" />
+
+order by 2 (
+desc (첫번째니까 emp_no로 descending order로 하는 거)
