--- a/Python/260121(SQL).md
+++ b/Python/260121(SQL).md
@@ -58,3 +58,69 @@ try:
 except mariadb.Error as e:
     print(f"MariaDB Error : {e}")
 ````
+
+```
+import mariadb
+from dotenv import load_dotenv
+load_dotenv()
+import os
+
+def findOne(sql):
+    """
+    단일 행 조회용 함수
+    - SQL을 받아 실행한 뒤
+    - 결과를 dict 형태로 반환
+    - 조회 결과가 없으면 None 반환
+    """
+    try:
+        # DB 접속 정보는 .env 파일에서 불러옴
+        # (보안 및 환경 분리를 위해 코드에 직접 작성하지 않음)
+        conn = mariadb.connect(
+            user = os.getenv('USER'),
+            password=os.getenv('PASSWORD'),
+            host=os.getenv('HOST'),
+            port=int(os.getenv('PORT')),
+            database=os.getenv('DATABASE')
+        )
+
+        # cursor: SQL을 실행하고 결과를 받는 객체
+        cur = conn.cursor()
+
+        # 전달받은 SQL 문자열 실행
+        # (한 줄/여러 줄 SQL 모두 문자열로 전달됨)
+        cur.execute(sql)
+
+        # 결과 중 첫 번째 행만 가져옴
+        # 조회 결과는 튜플 형태
+        row = cur.fetchone()
+
+        # 쿼리 결과의 컬럼 메타정보에서 컬럼명만 추출
+        # row 튜플과 1:1로 매핑하기 위함
+        columns = [desc[0] for desc in cur.description]
+
+        # 사용이 끝난 자원은 반드시 종료
+        # (웹 서비스에서는 커넥션 누수 방지에 매우 중요)
+        cur.close()
+        conn.close()
+
+        # (컬럼명, 값)을 묶어 dict 형태로 변환
+        # 조회 결과가 없으면 None 반환
+        return dict(zip(columns, row)) if row else None
+
+    except mariadb.Error as e:
+        # DB 연결 또는 SQL 실행 중 발생한 예외 처리
+        # 실무에서는 로그로 남기고 공통 에러 응답을 반환
+        print(f"MariaDB Error : {e}")
+        return None
+
+
+# 테스트용 SQL (여러 줄 SQL도 문자열로 그대로 전달)
+sql = """
+      SELECT 1 as NO
+      UNION ALL
+      SELECT 2
+      """
+
+# findOne은 첫 번째 행만 반환
+print(findOne(sql))
+```
