--- a/260126.md
+++ b/260126.md
@@ -9,6 +9,7 @@
 - https://github.com/ESG-EDU/Docs/tree/main/fastapi
 - (7) 다른 Python 프레임워크와 비교
 - 한 줄 개념 정리: "FastAPI는 URL과 HTTP 메서드를 함수에 명확히 매핑하는 구조로, 데이터 송수신에 최적화된 간단하고 직관적인 백엔드 프레임워크이다"
+- 강사님이 언급한 참조 페이지: https://fastapi.tiangolo.com/reference/fastapi/
 
 [디스코드 > 3팀 > 'FastAPI 기본 설치' post]
 - 앞으로 계속 사용할 명령어라서 포스트 만듦
@@ -27,5 +28,29 @@
 [method에 대하여]
 - tmi: CRUD와 관련이 있어서 method의 종류가 5가지라고 함
 - 실행해볼 것: `main.py`에서 5가지 method를 써본 후 `uv run fastapi dev` 실행시 아래 화면과 같이 나옴
+- checkpoint: 주소 두개 중 요놈 눌러야 됨
+<img width="385" height="19" alt="image" src="https://github.com/user-attachments/assets/b813b060-6b2e-4c08-847b-b6033b643554" />
 - tmi: `uv run fastapi dev`로 했기 때문에 화면에 반영이 되는 것. `uv run fastapi run`으로 하면 반영이 안 됨
 <img width="1519" height="408" alt="image" src="https://github.com/user-attachments/assets/a176401d-9b3d-4e20-baf8-8bc823f9e5aa" />
+
+[이미지 추가 작업]
+1) `images` 폴더를 만들고 폴더 안에 아무 이미지를 넣음
+2) `main.py`에 하기 코드 추가
+```
+from fastapi import FastAPI
+from fastapi.staticfiles import StaticFiles
+import os
+
+app = FastAPI()
+
+static_dir = os.path.join(os.path.dirname(__file__), "images")
+app.mount("/images", StaticFiles(directory=static_dir), name="images")
+```
+checkpoint: `app.mount("/images," <- 여기에 오는 이미지는 주소이기 때문에 `/images`가 아니어도 됨
+
+3) `uv run fastapi dev` 실행
+4) 하기 이미지 경로로 들어가서 주소에 다음과 같이 기입 `http://127.0.0.1:23306/images/0.png`
+<img width="360" height="19" alt="image" src="https://github.com/user-attachments/assets/e19d32d8-29e9-4318-bc99-68dd63e553d5" />
+
+- checkpoint: 주소의 `/images`뒤에 폴더 안에 넣은 이미지와 같은 이름을 기입해야 함 (내 이미지 이름은 '0.png')
+<img width="783" height="489" alt="image" src="https://github.com/user-attachments/assets/9b30d8a0-cb06-4efa-891a-a7a7c91edd5b" />
