--- a/260126.md
+++ b/260126.md
@@ -29,9 +29,12 @@
 - tmi: CRUD와 관련이 있어서 method의 종류가 5가지라고 함
 - 실행해볼 것: `main.py`에서 5가지 method를 써본 후 `uv run fastapi dev` 실행시 아래 화면과 같이 나옴
 - checkpoint: 주소 두개 중 요놈 눌러야 됨
+- **중요**: `main.py` 페이지에서 `@app` 말고 다른 함수 만들어도 FastAPI 화면에 안 뜸 (다른 함수 만들고 이 페이지에 왜 안보이는지 물어보지 말라고 강사님이 100번 강조함)
+- checkpoint: `@app`은 고정값이 아니라서 만약 `main = FastAPI()`로 해주면 `@main`으로 연결시켜주면 됨 (변수명이라는 뜻)
 <img width="385" height="19" alt="image" src="https://github.com/user-attachments/assets/b813b060-6b2e-4c08-847b-b6033b643554" />
 - tmi: `uv run fastapi dev`로 했기 때문에 화면에 반영이 되는 것. `uv run fastapi run`으로 하면 반영이 안 됨
 <img width="1519" height="408" alt="image" src="https://github.com/user-attachments/assets/a176401d-9b3d-4e20-baf8-8bc823f9e5aa" />
+
 
 [이미지 추가 작업]
 1) `images` 폴더를 만들고 폴더 안에 아무 이미지를 넣음
@@ -54,3 +57,94 @@ checkpoint: `app.mount("/images," <- 여기에 오는 이미지는 주소이기 
 
 - checkpoint: 주소의 `/images`뒤에 폴더 안에 넣은 이미지와 같은 이름을 기입해야 함 (내 이미지 이름은 '0.png')
 <img width="783" height="489" alt="image" src="https://github.com/user-attachments/assets/9b30d8a0-cb06-4efa-891a-a7a7c91edd5b" />
+
+
+
+<h3>2교시</h3>
+
+---------------------
+
+[이미지 외 작업]
+- frontend 부분에 css, html, javascript는 다른 파일에 분류하고 관리해줌
+1) update 폴더를 만들고 그 안에 각 폴더 및 파일들을 만들어줌
+<img width="948" height="680" alt="image" src="https://github.com/user-attachments/assets/05ef4e3f-5651-4f19-8428-66bd88f7cd03" />
+
+2) index.html에 다음과 같이 코드 넣어줌
+
+```
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-wirdth, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/index.css"/>
+    <script src="/javascript/index.js"></script>
+    </meta>
+    </meta>
+</head>
+<body>
+    <h1>안녕하세요</h1>
+</body>
+</html>
+```
+
+3) 하기 화면이 뜸
+
+<img width="749" height="253" alt="image" src="https://github.com/user-attachments/assets/44ad2917-0c37-4817-b704-92a7c8b1ec39" />
+
+- tmi: 만약 화면 무한로딩이다? 작업관리자 들어가서 Python 강제종료해준다(작업끝내기)
+
+[main.py 간략화] - 기능 넣기 전 url path 관리 방법
+
+1) `root.py`를 만들어준다
+
+```
+from fastapi import APIRouter
+
+main = APIRouter(prefix="/user", tags=["연습용"])
+
+@main.get("")
+def read_root():
+    return {"Hello": "World"}
+
+@main.post("")
+def read_root():
+    return {"Hello": "World"}
+
+@main.put("")
+def read_root():
+    return {"Hello": "World"}
+
+@main.delete("")
+def read_root():
+    return {"Hello": "World"}
+```
+
+2. main.py는 다음과 같이 간략화 한다
+
+```
+from fastapi import FastAPI
+from fastapi.staticfiles import StaticFiles
+import os
+from root import main
+
+app = FastAPI()
+
+static_dir = os.path.join(os.path.dirname(__file__), "update")
+app.mount("/update", StaticFiles(directory=static_dir), name="update")
+
+app.include_router(main)
+
+@main.get("/test")
+def read_root():
+    return {"Hello": "World"}
+```
+
+3) FastAPI에서 보이는 화면을 관리하기 위해 하기 화면과 같이 코드를 추가
+```
+main = APIRouter(prefix="/user", tags=["연습용"])
+```
+- 화면에서 달라진 부분: "연습용", "user"
+<img width="1413" height="490" alt="image" src="https://github.com/user-attachments/assets/e20290a6-a47d-43a6-a50e-6ac70717dc2d" />
+
