--- a/260126.md
+++ b/260126.md
@@ -148,3 +148,15 @@ main = APIRouter(prefix="/user", tags=["연습용"])
 - 화면에서 달라진 부분: "연습용", "user"
 <img width="1413" height="490" alt="image" src="https://github.com/user-attachments/assets/e20290a6-a47d-43a6-a50e-6ac70717dc2d" />
 
+
+<h3>3교시</h3>
+
+---------------------
+
+[user.py와 board.py 만들기]
+
+<img width="1247" height="585" alt="image" src="https://github.com/user-attachments/assets/be5d2657-4bc1-42be-932f-726c8bea4383" />
+
+구현된 화면:
+
+<img width="958" height="1040" alt="image" src="https://github.com/user-attachments/assets/f6e2dc61-42df-45ed-947c-4cd463ea0002" />
