--- a/260126.md
+++ b/260126.md
@@ -160,3 +160,26 @@ main = APIRouter(prefix="/user", tags=["연습용"])
 구현된 화면:
 
 <img width="958" height="1040" alt="image" src="https://github.com/user-attachments/assets/f6e2dc61-42df-45ed-947c-4cd463ea0002" />
+
+얘 파일관리:
+<img width="879" height="453" alt="image" src="https://github.com/user-attachments/assets/06cf36b1-ee6a-4533-8af2-593b95a0770c" />
+
+근데 이제 user, board 점점 많이 생기면 for문 돌려서 관리할 수 있으니까 다음과 같이 코드를 변경해줌
+```
+def urls():
+    return [user.router, board.router]
+
+apis = urls()
+for r in apis:
+    app.include_router(r)
+```
+
+root 추가
+
+<img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/2a219f0b-75ce-4294-ac7b-1846cad4d279" />
+
+<img width="758" height="562" alt="image" src="https://github.com/user-attachments/assets/748c75d3-d7cc-46ca-8746-3464d4e40e1c" />
+
+언니 이제 강사님이 올려주신 코드 보는게 빠를거같아 ㅋㅋ ㅅㅂ ㅠㅠ
+
+https://github.com/ESG-EDU/STUDY_FILES/commit/c3aa633b226e6e9698f8203548e597dc6e8c6e0d#diff-8dae47d83da5b794cc6bfa32793631a5a81d79774dd58027e4f9f281ae5f1bc3
