--- a/Python/260127.md
+++ b/Python/260127.md
@@ -1,1 +1,3 @@
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/a9ad44c1-0ec8-46ab-8fb6-f97ac208e50c" />
+
 ![Uploading image.png…]()
