--- a/Python/260127.md
+++ b/Python/260127.md
@@ -1,3 +1,5 @@
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/a9ad44c1-0ec8-46ab-8fb6-f97ac208e50c" />
 
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/f4c0ae6b-eefa-4baf-9381-37b5ccef3616" />
+
 ![Uploading image.png…]()
