--- a/Python/260127.md
+++ b/Python/260127.md
@@ -2,4 +2,4 @@
 
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/f4c0ae6b-eefa-4baf-9381-37b5ccef3616" />
 
-![Uploading image.png…]()
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/6eb88b79-88f3-4b6a-ab41-126140cce9c7" />
