--- a/Python/260127.md
+++ b/Python/260127.md
@@ -3,3 +3,7 @@
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/f4c0ae6b-eefa-4baf-9381-37b5ccef3616" />
 
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/6eb88b79-88f3-4b6a-ab41-126140cce9c7" />
+
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/7869c357-097e-4dad-959d-4d9a48203a7f" />
+
+https://fastapi.tiangolo.com/reference/apirouter/#fastapi.APIRouter
